--- a/index.html
+++ b/index.html
@@ -1,108 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Falcon</title>
-<style>
-  body {
-    margin: 0; 
-    background: #121212;
-    color: #0f0;
-    font-family: Arial, sans-serif;
-    padding: 20px;
-    text-align: center;
-  }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Falcon</title>
+  <style>
+    body {
+      margin: 0;
+      background: #121212;
+      color: #0f0;
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      text-align: center;
+    }
 
-  #loginBox {
-    background: #1a1a1a;
-    padding: 30px;
-    border-radius: 10px;
-    display: inline-block;
-    margin-top: 100px;
-  }
+    #loginBox {
+      background: #1a1a1a;
+      padding: 30px;
+      border-radius: 10px;
+      display: inline-block;
+      margin-top: 100px;
+    }
 
-  input {
-    padding: 10px;
-    width: 200px;
-    margin: 10px;
-    border-radius: 5px;
-    border: none;
-    font-size: 16px;
-  }
+    input, select {
+      padding: 10px;
+      width: 200px;
+      margin: 10px;
+      border-radius: 5px;
+      border: none;
+      font-size: 16px;
+      background: #1a1a1a;
+      color: #0f0;
+      border: 1px solid #0f0;
+    }
 
-  #loginBtn {
-    background: #0f0;
-    color: #000;
-    padding: 10px 20px;
-    font-weight: bold;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
+    #loginBtn {
+      background: #0f0;
+      color: #000;
+      padding: 10px 20px;
+      font-weight: bold;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
 
-  header {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 20px;
-  }
-  button {
-    background: #0f0;
-    border: none;
-    padding: 10px 20px;
-    margin: 5px;
-    font-size: 18px;
-    font-weight: bold;
-    color: #000;
-    border-radius: 5px;
-    cursor: pointer;
-    position: relative;
-  }
-  button:disabled {
-    background: #055005;
-    cursor: wait;
-  }
-  table {
-    margin: auto;
-    width: 90%;
-    max-width: 700px;
-    border-collapse: collapse;
-    background: #222;
-  }
-  th, td {
-    border: 1px solid #0f0;
-    padding: 10px;
-  }
-  th {
-    background: #0a0;
-  }
-  #status {
-    margin: 15px 0;
-    font-weight: bold;
-    min-height: 28px;
-    font-size: 18px;
-  }
+    header {
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
 
-  .spinner {
-    border: 4px solid #0f0;
-    border-top: 4px solid transparent;
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    animation: spin 1s linear infinite;
-    display: inline-block;
-    vertical-align: middle;
-    margin-right: 10px;
-  }
-  @keyframes spin {
-    0% { transform: rotate(0deg);}
-    100% { transform: rotate(360deg);}
-  }
+    button {
+      background: #0f0;
+      border: none;
+      padding: 10px 20px;
+      margin: 5px;
+      font-size: 18px;
+      font-weight: bold;
+      color: #000;
+      border-radius: 5px;
+      cursor: pointer;
+    }
 
-  #mainContent {
-    display: none;
-  }
-</style>
+    button:disabled {
+      background: #055005;
+      cursor: wait;
+    }
+
+    table {
+      margin: auto;
+      width: 90%;
+      max-width: 700px;
+      border-collapse: collapse;
+      background: #222;
+    }
+
+    th, td {
+      border: 1px solid #0f0;
+      padding: 10px;
+    }
+
+    th {
+      background: #0a0;
+    }
+
+    #status {
+      margin: 15px 0;
+      font-weight: bold;
+      min-height: 28px;
+      font-size: 18px;
+    }
+
+    .spinner {
+      border: 4px solid #0f0;
+      border-top: 4px solid transparent;
+      border-radius: 50%;
+      width: 20px;
+      height: 20px;
+      animation: spin 1s linear infinite;
+      display: inline-block;
+      vertical-align: middle;
+      margin-right: 10px;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg);}
+      100% { transform: rotate(360deg);}
+    }
+
+    #mainContent {
+      display: none;
+    }
+  </style>
 </head>
 <body>
 
@@ -116,6 +125,20 @@
 
 <div id="mainContent">
   <header>🎲 Falcon Signal</header>
+
+  <!-- ✅ Market Type Dropdown -->
+  <label for="marketSelect">Market Type:</label>
+  <select id="marketSelect" onchange="updateAssetOptions()">
+    <option value="" disabled selected>-- Select Market Type --</option>
+    <option value="real">Real Market</option>
+    <option value="otc">OTC Market</option>
+  </select>
+
+  <!-- ✅ Market Asset Dropdown -->
+  <label for="assetSelect">Market Asset:</label>
+  <select id="assetSelect">
+    <option value="">Select Market Type First</option>
+  </select><br>
 
   <button id="generateBtn" onclick="generateSignal()">Generate Signal</button>
   <button onclick="resetSignals()">Falcon Reset</button>
@@ -154,24 +177,49 @@
     }
   }
 
-  const assets = ['EUR/USD', 'GBP/USD', 'USD/JPY', 'AUD/USD'];
-  const directions = ['BUY', 'SELL'];
+  const realAssets = ['EUR/USD', 'GBP/USD', 'USD/JPY', 'AUD/USD'];
+  const otcAssets = ['EUR/USD(OTC)', 'NZD/CAD(OTC)', 'GBP/USD(OTC)', 'USD/JPY(OTC)', 'AUD/USD(OTC)', 'USD/ARS(OTC)', 'USD/INR(OTC)', 'USD/DZD(OTC)', 'USD/EGP(OTC)', 'USD/BRL(OTC)', 'USD/PHP(OTC)', 'USD/NGN(OTC)'];
+  const directions = ['UP', 'DOWN'];
   const expiries = ['1M'];
   const strategies = ['Price Action', 'EMA', 'Volume'];
 
   const generateBtn = document.getElementById('generateBtn');
   const statusDiv = document.getElementById('status');
 
+  function updateAssetOptions() {
+    const marketType = document.getElementById('marketSelect').value;
+    const assetSelect = document.getElementById('assetSelect');
+
+    assetSelect.innerHTML = ''; // Clear existing options
+
+    const assets = marketType === 'real' ? realAssets : otcAssets;
+
+    assets.forEach(asset => {
+      const option = document.createElement('option');
+      option.value = asset;
+      option.textContent = asset;
+      assetSelect.appendChild(option);
+    });
+  }
+
   function generateSignal() {
     generateBtn.disabled = true;
+
     const strategy = strategies[Math.floor(Math.random() * strategies.length)];
-    statusDiv.innerHTML = `<span class="spinner"></span>Generating Signal with strategy: <strong>${strategy}</strong>...`;
+    const marketType = document.getElementById('marketSelect').value;
+    const selectedAsset = document.getElementById('assetSelect').value;
+
+    if (!marketType || !selectedAsset) {
+      alert("❗ Please select both Market Type and Asset.");
+      generateBtn.disabled = false;
+      return;
+    }
+
+    statusDiv.innerHTML = `<span class="spinner"></span>Generating ${marketType.toUpperCase()} Signal for <strong>${selectedAsset}</strong> with strategy: <strong>${strategy}</strong>...`;
 
     setTimeout(() => {
       const now = new Date();
-      const time = now.getHours().toString().padStart(2,'0') + ':' + now.getMinutes().toString().padStart(2,'0');
-
-      const asset = assets[Math.floor(Math.random() * assets.length)];
+      const time = now.getHours().toString().padStart(2, '0') + ':' + now.getMinutes().toString().padStart(2, '0');
       const direction = directions[Math.floor(Math.random() * directions.length)];
       const expiry = expiries[Math.floor(Math.random() * expiries.length)];
 
@@ -179,7 +227,7 @@
       const row = document.createElement('tr');
       row.innerHTML = `
         <td>${time}</td>
-        <td>${asset}</td>
+        <td>${selectedAsset}</td>
         <td>${direction}</td>
         <td>${expiry}</td>
         <td>${strategy}</td>
